k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: last-backend
  labels:
    app: test-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      labels:
        app: test-backend
    spec:
      containers:
        - name: test-backend
          image: rukurok/test-backend:latest
          ports:
            - containerPort: 8080
