k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: last-backend
spec:
  selector:
    app: last-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
